<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_main"
            app:menu="@menu/menu_activity_main"
            app:navigationIcon="@drawable/ic_menu"
            app:title="ID 123 456 789"
            app:titleTextColor="@color/subtitle_color" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dim16"
            android:paddingEnd="@dimen/dim16">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="@dimen/user_photo_size"
                android:layout_height="@dimen/user_photo_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dim12">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/user_photo"
                    app:shapeAppearanceOverlay="@style/roundImage" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/shapeableImageView"
                    android:layout_width="@dimen/size_48"
                    android:layout_height="@dimen/size_48"
                    android:padding="1dp"
                    android:layout_gravity="bottom|start"
                    android:background="@color/background_main"
                    android:backgroundTint="@color/grey"
                    android:backgroundTintMode="add"
                    app:shapeAppearanceOverlay="@style/roundImage"
                    app:strokeColor="@color/subtitle_color"
                    app:strokeWidth="1dp" />

                <TextView
                    android:fontFamily="@font/inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_4_7"
                    android:textColor="@color/subtitle_color"
                    android:textSize="@dimen/large_text"
                    app:layout_anchor="@+id/shapeableImageView"
                    app:layout_anchorGravity="center" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter"
                android:text="@string/alise_peterson"
                android:textColor="@color/subtitle_color"
                android:textSize="@dimen/large_text" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:contentDescription="@string/language"
                    android:src="@drawable/ic_language" />

                <TextView
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/russian_english_german" />

                <TextView
                    style="@style/SmallText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:contentDescription="@string/location"
                    android:src="@drawable/ic_location" />

                <TextView
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_york_city_usa" />

                <TextView
                    style="@style/SmallText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_profile_photo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    style="@style/MyButtonStyle"
                    android:layout_width="@dimen/size_48"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/questionnaires" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.button.MaterialButton
                    style="@style/MyButtonStyle"
                    android:layout_width="@dimen/size_48"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/people" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                style="@style/SmallText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_me" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter"
                android:text="@string/large_text"
                android:textColor="@color/subtitle_color"
                android:textSize="16sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                app:dividerColor="@color/light_grey" />

            <TextView
                style="@style/SmallText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:text="@string/_50_300" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:text="@string/dream_and_get"
                    android:textColor="@color/subtitle_color"
                    android:textSize="20sp" />

                <Switch
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:textColorLink="@color/stroke_color"
                    tools:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/wishes" />

            <TextView
                style="@style/CategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moments" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_moment" />

            <TextView
                style="@style/CategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chronicles" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                tools:itemCount="9"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_chronic"
                tools:spanCount="3" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>