<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_main"
            app:menu="@menu/menu_activity_main"
            app:navigationIcon="@drawable/ic_menu"
            app:title="ID 123 456 789"
            app:titleTextAppearance="@style/MyToolbar"
            app:titleTextColor="@color/subtitle_color" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/coordinatorLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user_photo"
                    app:shapeAppearanceOverlay="@style/roundImage" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/shapeableImageView"
                    android:layout_width="@dimen/size_48"
                    android:layout_height="@dimen/size_48"
                    android:layout_gravity="bottom|start"
                    android:background="@color/background_main"
                    android:backgroundTint="@color/grey"
                    android:backgroundTintMode="add"
                    android:padding="1dp"
                    app:shapeAppearanceOverlay="@style/roundImage"
                    app:strokeColor="@color/subtitle_color"
                    app:strokeWidth="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter"
                    android:text="@string/_4_7"
                    android:textColor="@color/subtitle_color"
                    android:textSize="24sp"
                    app:layout_anchor="@+id/shapeableImageView"
                    app:layout_anchorGravity="center" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim12"
                android:fontFamily="@font/inter_medium"
                android:gravity="top"
                android:text="@string/alise_peterson"
                android:textColor="@color/subtitle_color"
                android:textSize="@dimen/large_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dim16"
                android:paddingEnd="@dimen/dim16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:contentDescription="@string/language"
                    android:src="@drawable/ic_language" />

                <TextView
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/russian_english_german" />

                <TextView
                    style="@style/SmallText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dim16"
                android:paddingEnd="@dimen/dim16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat6">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:contentDescription="@string/location"
                    android:src="@drawable/ic_location" />

                <TextView
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim12"
                    android:layout_marginBottom="@dimen/dim12"
                    android:text="@string/new_york_city_usa" />

                <TextView
                    style="@style/SmallText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_add_photos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dim16"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/dim16"
                android:orientation="horizontal"
                app:layout_constraintDimensionRatio="3:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat7"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                tools:itemCount="4"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_profile_photo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim16"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/dim16"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_add_photos">

                <com.google.android.material.button.MaterialButton
                    style="@style/MyButtonStyle"
                    android:layout_width="@dimen/size_48"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/questionnaires" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_people"
                    style="@style/MyButtonStyle"
                    android:layout_width="@dimen/size_48"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/people" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/MyInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim16"
                android:layout_marginTop="@dimen/dim16"
                android:layout_marginEnd="@dimen/dim16"
                android:hint="@string/about_me"
                app:counterTextColor="@color/light_grey"
                app:boxCollapsedPaddingTop="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                android:textColorHint="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:maxLength="300"
                    android:paddingStart="0dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="0dp"
                    android:text="@string/large_text"
                    android:textColor="@color/subtitle_color"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim16"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/dim16"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:text="@string/dream_and_get"
                    android:textColor="@color/subtitle_color"
                    android:textSize="16sp" />

                <Switch
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:textColorLink="@color/stroke_color"
                    tools:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim16"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/dim16"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/wishes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

            <TextView
                android:id="@+id/textView2"
                style="@style/CategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim16"
                android:layout_marginTop="@dimen/dim18"
                android:text="@string/moments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_moments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:itemCount="5"
                tools:layout_marginStart="@dimen/dim16"
                tools:listitem="@layout/tool_item_moment" />

            <TextView
                android:id="@+id/textView3"
                style="@style/CategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim16"
                android:layout_marginTop="@dimen/dim18"
                android:text="@string/chronicles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_moments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_chronicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim16"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/dim16"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:spanCount="3"
                tools:itemCount="12"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_chronic" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>